fix horizontal scroll

--- a/Source/Blazorise.AntDesign/Styles/components/_layout.scss
+++ b/Source/Blazorise.AntDesign/Styles/components/_layout.scss
@@ -81,6 +81,7 @@
     width: 100%;
     height: 100%;
     min-height: 0;
+    overflow-x: hidden;
     overflow-y: auto;
     z-index: 2;
 
