--- a/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
+++ b/Source/Blazorise.AntDesign/wwwroot/blazorise.antdesign.css
@@ -5538,6 +5538,7 @@ template {
   width: 100%;
   height: 100%;
   min-height: 0;
+  overflow-x: hidden;
   overflow-y: auto;
   z-index: 2;
 }
